Fixed intro layout issue

--- a/css/containers.css
+++ b/css/containers.css
@@ -1,10 +1,10 @@
 #main-container {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-
+    
+    height: 100%;
     
 }
 
@@ -13,28 +13,27 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* overflow-wrap: break-word; */
+    width: 100%;
+    height: 100vh;
 }
 
 
 #cards-container {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+
     align-items: center;
     width: 85%;
     height: 100%;
 
     min-width: 450px;
-    /* max-width: 768px; */
     min-height: 700px;
     max-height: 1000px;
-
-    /* background-color: aquamarine; */
 }
 
 #nav-container {
     margin-top: 4rem;
+    margin-bottom: 4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,8 +41,6 @@
     max-height: 200px;
     width: 70%;
     max-width: 400px;
-
-    /* background-color: aquamarine; */
 }
 
 #cards-container,
